--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 				
 			</div>
 			<div class="col-md-12 text-center to-animate">
-				<p>欢迎浏览的我的技术博客<a href="https://sunyajie.github.io/blog/">blog</a></p>
+				<p>欢迎浏览的我的技术博客<a href="https://sunyajie.github.io/blog/public">blog</a></p>
 			</div>
 		</div>
 	</section>
